--- a/nate-am-review/SectionIII/TopologyOptimization.tex
+++ b/nate-am-review/SectionIII/TopologyOptimization.tex
@@ -1,4 +1,4 @@
-\subsubsection{Topology Optimization}
+\subsubsection{Topology Optimization} \label{sec:topology optimization}
 Alloy design and experimental design focus around combinatorial screening of inputs to either search for \textit{new} properties or optimize on current properties. These optimizations reduce manufacturing cost, monetary or otherwise, and maximize performance capability. The same optimization can be applied to mechanical properties of parts. For structural materials, the goal is to optimize load bearing capacity or lifetime while minimizing the amount of material used. For aerospace, the goal is to minimize weight. Unique manufacturing geometries was one of the first intended applications of AM. Topology optimization (TO) focuses around exactly this task -- finding optimized topological structures for a given mechanical application. 
 
 A filter is a mathematical operation which reveals information about a region of pixels/voxels in a mesh. Filters are most often represented as a product of a filter matrix with a matrix of mesh pixel values. Topology optimization proceeds by generating a CAD model of an AM part and modeling its performance, such as testing performance under mechanical load through an FEA simulation. Filters are applied to the CAD mesh which selectively removes material from the part. Then, the mechanical performance of the new part is modeled, followed by further material removal. This process proceeds until either a minimum weight/volume condition is met or the mechanical performance of the part is degraded.
