--- a/nate-am-review/Main.tex
+++ b/nate-am-review/Main.tex
@@ -1,19 +1,21 @@
 \documentclass[twocolumn,superscriptaddress,nofootinbib]{revtex4-1}
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+\usepackage{amscd}
 \usepackage{amsmath}
 \usepackage{amssymb}
-\usepackage{amscd}
-\usepackage{graphicx}
-\usepackage{tabularx}
-\usepackage{floatrow}
-\usepackage{verbatim}
-\usepackage{subfiles}
 \usepackage{booktabs}
-\usepackage{mathtools}
 \usepackage{float}
-\floatstyle{plaintop}
-\restylefloat{table}
+\usepackage{floatrow}
+\usepackage{graphicx}
 \usepackage{import}
+\usepackage{mathtools}
+\usepackage{natbib}
+\floatstyle{plaintop}
+\usepackage{subfiles}
+\restylefloat{table}
+\usepackage{tabularx}
+\usepackage{verbatim}
+\usepackage{xcolor}
 %\usepackage[bottom]{footmisc}
 
 
